--- a/web/plato/List.xhtml
+++ b/web/plato/List.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.ListPlatoTitle}"></h:outputText>
+            <h:outputText value="Gestionar Platos"></h:outputText>
         </ui:define>
         <ui:define name="body">
             
