--- a/web/categoria/Edit.xhtml
+++ b/web/categoria/Edit.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.EditCategoriaTitle}"></h:outputText>
+            <h:outputText value="Editar Categoria"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
