--- a/web/categoria/List.xhtml
+++ b/web/categoria/List.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="Administrador"></h:outputText>
+            <h:outputText value="Inicio Administrador"></h:outputText>
         </ui:define>
         <ui:define name="body">
             
