--- a/web/platoRestaurante/View.xhtml
+++ b/web/platoRestaurante/View.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="Visualizar Plato"></h:outputText>
+            <h:outputText value="Ver Plato"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
