--- a/web/restaurante/Create.xhtml
+++ b/web/restaurante/Create.xhtml
@@ -8,7 +8,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="Crear Restaurante"></h:outputText>
+            <h:outputText value="Agregar Restaurante"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
