--- a/web/promociones/Edit.xhtml
+++ b/web/promociones/Edit.xhtml
@@ -47,9 +47,7 @@
                     <h:outputLabel value="#{bundle.EditPromocionesLabel_promoDescripcion}" for="promoDescripcion" />
                     <h:inputText id="promoDescripcion" value="#{promocionesController.selected.promoDescripcion}" title="#{bundle.EditPromocionesTitle_promoDescripcion}" />
                     <h:outputLabel value="#{bundle.EditPromocionesLabel_promoFecha}" for="promoFecha" />
-                    <h:inputText id="promoFecha" value="#{promocionesController.selected.promoFecha}" title="#{bundle.EditPromocionesTitle_promoFecha}" >
-                        <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
-                    </h:inputText>
+                    <p:calendar id="popup" value="#{promocionesController.selected.promoFecha}" />
                     <h:outputLabel value="#{bundle.EditPromocionesLabel_promoDuracion}" for="promoDuracion" />
                     <h:inputText id="promoDuracion" value="#{promocionesController.selected.promoDuracion}" title="#{bundle.EditPromocionesTitle_promoDuracion}" />
                 </h:panelGrid>
