--- a/web/usuario/paginaUsuario.xhtml
+++ b/web/usuario/paginaUsuario.xhtml
@@ -20,6 +20,7 @@
                 
                 <h:button outcome="plato/GestionPlatos" value="Gestion de Platos" class="btn btn-primary"/>
                 <h:button outcome="promociones/GestionPromociones" value="Gestion de Promociones" class="btn btn-primary"/>
+                <h:button outcome="platoRestaurante/GestionPlatoRestaurante" value="Gestion de Plato Restaurante" class="btn btn-primary"/>
                 <h:button outcome="promocioneslPlatoRestaurante/GestionPromocionesPlatoRestaurante" value="Gestion de Promociones Plato Restaurante" class="btn btn-primary"/>
                 <br />  
                 <h:form>            
