--- a/web/admin/usuario/Create.xhtml
+++ b/web/admin/usuario/Create.xhtml
@@ -7,7 +7,7 @@
 
     <ui:composition template="/template.xhtml">
         <ui:define name="title">
-            <h:outputText value="#{bundle.CreateUsuarioTitle}"></h:outputText>
+            <h:outputText value="Crear un nuevo Usuario"></h:outputText>
         </ui:define>
         <ui:define name="body">
             <h:panelGroup id="messagePanel" layout="block">
@@ -15,21 +15,17 @@
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueId}" for="dueId" />
-                    <h:inputText id="dueId" value="#{usuarioController.selected.dueId}" title="#{bundle.CreateUsuarioTitle_dueId}" required="true" requiredMessage="#{bundle.CreateUsuarioRequiredMessage_dueId}"/>
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueNombre}" for="dueNombre" />
+                    <h:outputLabel value="Nombre" for="dueNombre" />
                     <h:inputText id="dueNombre" value="#{usuarioController.selected.dueNombre}" title="#{bundle.CreateUsuarioTitle_dueNombre}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueEmail}" for="dueEmail" />
+                    <h:outputLabel value="Email" for="dueEmail" />
                     <h:inputText id="dueEmail" value="#{usuarioController.selected.dueEmail}" title="#{bundle.CreateUsuarioTitle_dueEmail}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueRol}" for="dueRol" />
-                    <h:inputText id="dueRol" value="#{usuarioController.selected.dueRol}" title="#{bundle.CreateUsuarioTitle_dueRol}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueUsuario}" for="dueUsuario" />
+                    <h:outputLabel value="Nombre de Usuario" for="dueUsuario" />
                     <h:inputText id="dueUsuario" value="#{usuarioController.selected.dueUsuario}" title="#{bundle.CreateUsuarioTitle_dueUsuario}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_duePass}" for="duePass" />
+                    <h:outputLabel value="Contraseña" for="duePass" />
                     <h:inputText id="duePass" value="#{usuarioController.selected.duePass}" title="#{bundle.CreateUsuarioTitle_duePass}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueEstado}" for="dueEstado" />
+                    <h:outputLabel value="Estado" for="dueEstado" />
                     <h:inputText id="dueEstado" value="#{usuarioController.selected.dueEstado}" title="#{bundle.CreateUsuarioTitle_dueEstado}" />
-                    <h:outputLabel value="#{bundle.CreateUsuarioLabel_dueFechaRegistro}" for="dueFechaRegistro" />
+                    <h:outputLabel value="Fecha de Registro" for="dueFechaRegistro" />
                     <h:inputText id="dueFechaRegistro" value="#{usuarioController.selected.dueFechaRegistro}" title="#{bundle.CreateUsuarioTitle_dueFechaRegistro}" >
                         <f:convertDateTime pattern="MM/dd/yyyy HH:mm:ss" />
                     </h:inputText>
