implementacion crear restaurante muestra los nombres de usuario, en crear plato muestra el nombre de las categorias, crear plato del restaurante muestra nombre del plato

--- a/web/admin/principaladmin.xhtml
+++ b/web/admin/principaladmin.xhtml
@@ -35,10 +35,9 @@
             <ui:define name="body">
                 <br/>
                 <br />
-                
-                <h:button outcome="calificacion/GestionCalificacion" value="Gestion de Calificaciones" class="btn btn-primary"/>
+                <h:button outcome="plato/GestionPlatos" value="Gestion de Platos" class="btn btn-primary"/>
+                <h:button outcome="grupo/GestionGrupo" value="Gestion de Grupos" class="btn btn-primary"/>
                 <h:button outcome="categoria/GestionCategoria" value="Gestion de Categorias" class="btn btn-primary"/>
-                <h:button outcome="grupo/GestionGrupo" value="Gestion de Grupo" class="btn btn-primary"/>
                 <h:button outcome="restaurante/GestionRestaurante" value="Gestion de Restaurantes" class="btn btn-primary"/>
                 <h:button outcome="usuario/GestionUsuario" value="Gestion de Usuarios" class="btn btn-primary"/>
                 <h:button outcome="usuarioGrupo/GestionUsuarioGrupo" value="Gestion de Usuario Grupo" class="btn btn-primary"/>
