--- a/web/usuario/paginaUsuario.xhtml
+++ b/web/usuario/paginaUsuario.xhtml
@@ -18,7 +18,7 @@
                 <br/>
                 <br />
                 
-                <h:button outcome="plato/GestionPlatos" value="Gestion de Platos" class="btn btn-primary"/>
+                <h:button outcome="calificacion/GestionCalificacion" value="Gestion de Calificaciones" class="btn btn-primary"/>
                 <h:button outcome="promociones/GestionPromociones" value="Gestion de Promociones" class="btn btn-primary"/>
                 <h:button outcome="platoRestaurante/GestionPlatoRestaurante" value="Gestion de Plato Restaurante" class="btn btn-primary"/>
                 <h:button outcome="promocioneslPlatoRestaurante/GestionPromocionesPlatoRestaurante" value="Gestion de Promociones Plato Restaurante" class="btn btn-primary"/>
