Se quito la parte de promociones en usuario dueño de restaurante y el crear calificacion que se dejo solo el listar, en administrador se escondio crud de grupo y de usuario grupo

--- a/web/usuario/paginaUsuario.xhtml
+++ b/web/usuario/paginaUsuario.xhtml
@@ -17,11 +17,9 @@
                 GLOTON GESTION PLATOS Y PROMOCIONES
                 <br/>
                 <br />
-                
-                <h:button outcome="calificacion/GestionCalificacion" value="Gestion de Calificaciones" class="btn btn-primary"/>
-                <h:button outcome="promociones/GestionPromociones" value="Gestion de Promociones" class="btn btn-primary"/>
+                <h:button outcome="calificacion/List" value="Lista de Calificaciones" class="btn btn-primary"/>
                 <h:button outcome="platoRestaurante/GestionPlatoRestaurante" value="Gestion de Plato Restaurante" class="btn btn-primary"/>
-                <h:button outcome="promocioneslPlatoRestaurante/GestionPromocionesPlatoRestaurante" value="Gestion de Promociones Plato Restaurante" class="btn btn-primary"/>
+                <h:button outcome="restaurante/Edit" value="Editar Restaurante" class="btn btn-primary"/>
                 <br />  
                 <h:form>            
                 <p:commandButton value="Logout" action="#{sessionController.logout()}" icon="ui-icon-person"/>           
