--- a/web/admin/categoria/Create.xhtml
+++ b/web/admin/categoria/Create.xhtml
@@ -5,33 +5,39 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.CreateCategoriaTitle}"></h:outputText>
+    <ui:composition template="/plantillaMaestra.xhtml">
+        
+        <ui:define name="top">
+            <ul class="nav nav-pills">
+                <li><a href="#" class="btn btn-info btn-lg">Nueva Categoría</a></li>
+                <li><a href="List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a></li>
+                <li><a href="../plato/List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a></li>
+                <li><a href="../restaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de Restaurantes</a></li>
+                <li><a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a></li>
+            </ul>
         </ui:define>
-        <ui:define name="body">
+
+
+        <ui:define name="right">
+        </ui:define>
+        <ui:define name="content">
+            <br/><br/>       
+            <h1 class="page-header">Categorias</h1>
+            <br/><br/> 
             <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+            <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.CreateCategoriaLabel_catNombre}" for="catNombre" />
+                    <h:outputLabel value="Nombre" for="catNombre" />
                     <h:inputText id="catNombre" value="#{categoriaController.selected.catNombre}" title="#{bundle.CreateCategoriaTitle_catNombre}" />
-                    <h:outputLabel value="#{bundle.CreateCategoriaLabel_catImagen}" for="catImagen" />
+                    <h:outputLabel value="Imagen" for="catImagen" />
                     <h:inputText id="catImagen" value="#{categoriaController.selected.catImagen}" title="#{bundle.CreateCategoriaTitle_catImagen}" />
-                    <h:outputLabel value="#{bundle.CreateCategoriaLabel_catEstado}" for="catEstado" />
+                    <h:outputLabel value="Estado" for="catEstado" />
                     <h:inputText id="catEstado" value="#{categoriaController.selected.catEstado}" title="#{bundle.CreateCategoriaTitle_catEstado}" />
-                    <h:outputLabel value="#{bundle.CreateCategoriaLabel_catId}" for="catId" />
-                    <h:inputText id="catId" value="#{categoriaController.selected.catId}" title="#{bundle.CreateCategoriaTitle_catId}" required="true" requiredMessage="#{bundle.CreateCategoriaRequiredMessage_catId}"/>
                 </h:panelGrid>
                 <br />
-                <h:commandLink action="#{categoriaController.create}" value="#{bundle.CreateCategoriaSaveLink}" />
-                <br />
-                <br />
-                <h:commandLink action="#{categoriaController.prepareList}" value="#{bundle.CreateCategoriaShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.CreateCategoriaIndexLink}"/>
+                <h:commandButton class="btn btn-primary" action="#{categoriaController.create}" value="Guardar" />
             </h:form>
         </ui:define>
     </ui:composition>
