--- a/web/admin/plato/Edit.xhtml
+++ b/web/admin/plato/Edit.xhtml
@@ -5,40 +5,44 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.EditPlatoTitle}"></h:outputText>
-        </ui:define>
-        <ui:define name="body">
-            <h:panelGroup id="messagePanel" layout="block">
-                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-            </h:panelGroup>
-            <h:form>
-                <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditPlatoLabel_plaNombre}" for="plaNombre" />
-                    <h:inputText id="plaNombre" value="#{platoController.selected.plaNombre}" title="#{bundle.EditPlatoTitle_plaNombre}" />
-                    <h:outputLabel value="#{bundle.EditPlatoLabel_plaImagen}" for="plaImagen" />
-                    <h:inputText id="plaImagen" value="#{platoController.selected.plaImagen}" title="#{bundle.EditPlatoTitle_plaImagen}" />
-                    <h:outputLabel value="#{bundle.EditPlatoLabel_plaEstado}" for="plaEstado" />
-                    <h:inputText id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.EditPlatoTitle_plaEstado}" />
-                    <h:outputLabel value="#{bundle.EditPlatoLabel_plaId}" for="plaId" />
-                    <h:inputText id="plaId" value="#{platoController.selected.plaId}" title="#{bundle.EditPlatoTitle_plaId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_plaId}"/>
-                    <h:outputLabel value="#{bundle.EditPlatoLabel_tblcategoriacatId}" for="tblcategoriacatId" />
-                    <h:selectOneMenu id="tblcategoriacatId" value="#{platoController.selected.tblcategoriacatId}" title="#{bundle.EditPlatoTitle_tblcategoriacatId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_tblcategoriacatId}">
-                        <f:selectItems value="#{categoriaController.itemsAvailableSelectOne}"/>
-                    </h:selectOneMenu>
-                </h:panelGrid>
-                <h:commandLink action="#{platoController.update}" value="#{bundle.EditPlatoSaveLink}"/>
-                <br />
-                <br />
-                <h:link outcome="View" value="#{bundle.EditPlatoViewLink}"/>
-                <br />
-                <h:commandLink action="#{platoController.prepareList}" value="#{bundle.EditPlatoShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.EditPlatoIndexLink}" />
-            </h:form>
-        </ui:define>
+    <ui:composition template="/plantillaMaestra.xhtml">
+          
+            <ui:define name="top">    
+                <ul class="nav nav-pills">
+                    <li><a href="#" class="btn btn-info btn-lg">Editar Plato</a></li>
+                    <li><a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a></li>
+                    <li><a href="List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a></li>
+                    <li><a href="../restaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de Restaurantes</a></li>
+                    <li><a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a></li>
+                </ul>
+            </ui:define>
+                
+            <ui:define name="content">
+                <br/><br/>
+                <h1 class="page-header">Platos</h1>
+                <br/><br/>
+                <h:panelGroup id="messagePanel" layout="block">
+                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+                </h:panelGroup>
+                <h:form>    
+                    <h:panelGrid columns="2">
+                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaNombre}" for="plaNombre" />
+                        <h:inputText id="plaNombre" value="#{platoController.selected.plaNombre}" title="#{bundle.EditPlatoTitle_plaNombre}" />
+                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaImagen}" for="plaImagen" />
+                        <h:inputText id="plaImagen" value="#{platoController.selected.plaImagen}" title="#{bundle.EditPlatoTitle_plaImagen}" />
+                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaEstado}" for="plaEstado" />
+                        <h:inputText id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.EditPlatoTitle_plaEstado}" />
+                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaId}" for="plaId" />
+                        <h:inputText id="plaId" value="#{platoController.selected.plaId}" title="#{bundle.EditPlatoTitle_plaId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_plaId}"/>
+                        <h:outputLabel value="#{bundle.EditPlatoLabel_tblcategoriacatId}" for="tblcategoriacatId" />
+                        <h:selectOneMenu id="tblcategoriacatId" value="#{platoController.selected.tblcategoriacatId}" title="#{bundle.EditPlatoTitle_tblcategoriacatId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_tblcategoriacatId}">
+                            <f:selectItems value="#{categoriaController.itemsAvailableSelectOne}"/>
+                        </h:selectOneMenu>
+                    </h:panelGrid>
+                    <h:commandButton class="btn btn-primary" action="#{platoController.update}" value="#{bundle.EditPlatoSaveLink}"/>
+
+                </h:form>
+            </ui:define>
     </ui:composition>
 
 </html>
