--- a/web/admin/restaurante/Edit.xhtml
+++ b/web/admin/restaurante/Edit.xhtml
@@ -5,48 +5,53 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
-    <ui:composition template="/template.xhtml">
-        <ui:define name="title">
-            <h:outputText value="#{bundle.EditRestauranteTitle}"></h:outputText>
+    <ui:composition template="/plantillaMaestra.xhtml">
+        
+        <ui:define name="top">
+            <ul class="nav nav-pills">
+                <li><a href="#" class="btn btn-info btn-lg">Editar Restaurante</a></li>
+                <li><a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a></li>
+                <li><a href="../plato/List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a></li>
+                <li><a href="List.xhtml" class="btn btn-default btn-lg">Gestion de Restaurantes</a></li>
+                <li><a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a></li>
+            </ul>
         </ui:define>
-        <ui:define name="body">
+
+
+        <ui:define name="right">
+        </ui:define>
+        <ui:define name="content">
+            <br/><br/>       
+            <h1 class="page-header">Restaurante</h1>
+            <br/><br/> 
             <h:panelGroup id="messagePanel" layout="block">
                 <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
             <h:form>
                 <h:panelGrid columns="2">
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resNit}" for="resNit" />
+                    <h:outputLabel value="Nit" for="resNit" />
                     <h:inputText id="resNit" value="#{restauranteController.selected.resNit}" title="#{bundle.EditRestauranteTitle_resNit}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resNombre}" for="resNombre" />
+                    <h:outputLabel value="Nombre" for="resNombre" />
                     <h:inputText id="resNombre" value="#{restauranteController.selected.resNombre}" title="#{bundle.EditRestauranteTitle_resNombre}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resDireccion}" for="resDireccion" />
+                    <h:outputLabel value="Dirección" for="resDireccion" />
                     <h:inputText id="resDireccion" value="#{restauranteController.selected.resDireccion}" title="#{bundle.EditRestauranteTitle_resDireccion}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resTelefono}" for="resTelefono" />
+                    <h:outputLabel value="Telefono" for="resTelefono" />
                     <h:inputText id="resTelefono" value="#{restauranteController.selected.resTelefono}" title="#{bundle.EditRestauranteTitle_resTelefono}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resLogo}" for="resLogo" />
+                    <h:outputLabel value="Logo" for="resLogo" />
                     <h:inputText id="resLogo" value="#{restauranteController.selected.resLogo}" title="#{bundle.EditRestauranteTitle_resLogo}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resEstado}" for="resEstado" />
+                    <h:outputLabel value="Estado" for="resEstado" />
                     <h:inputText id="resEstado" value="#{restauranteController.selected.resEstado}" title="#{bundle.EditRestauranteTitle_resEstado}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resLatitud}" for="resLatitud" />
+                    <h:outputLabel value="Latitud" for="resLatitud" />
                     <h:inputText id="resLatitud" value="#{restauranteController.selected.resLatitud}" title="#{bundle.EditRestauranteTitle_resLatitud}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_tesLongitud}" for="tesLongitud" />
+                    <h:outputLabel value="Longitud" for="tesLongitud" />
                     <h:inputText id="tesLongitud" value="#{restauranteController.selected.tesLongitud}" title="#{bundle.EditRestauranteTitle_tesLongitud}" />
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_resId}" for="resId" />
-                    <h:inputText id="resId" value="#{restauranteController.selected.resId}" title="#{bundle.EditRestauranteTitle_resId}" required="true" requiredMessage="#{bundle.EditRestauranteRequiredMessage_resId}"/>
-                    <h:outputLabel value="#{bundle.EditRestauranteLabel_tblUsuarioDueId}" for="tblUsuarioDueId" />
-                    <h:selectOneMenu id="tblUsuarioDueId" value="#{restauranteController.selected.tblUsuarioDueId}" title="#{bundle.EditRestauranteTitle_tblUsuarioDueId}" >
-                        <f:selectItems value="#{usuarioController.itemsAvailableSelectOne}"/>
+                    <h:outputLabel value="Dueño" for="tblUsuarioDueId" />
+                    <h:selectOneMenu id="tblUsuarioDueId" value="#{restauranteController.selected.tblUsuarioDueId}" title="#{bundle.CreateRestauranteTitle_tblUsuarioDueId}" >
+                        <f:selectItems  value="#{usuarioController.listUsuarios}" var="usuario" itemLabel="#{usuario.dueUsuario}"/>
                     </h:selectOneMenu>
                 </h:panelGrid>
-                <h:commandLink action="#{restauranteController.update}" value="#{bundle.EditRestauranteSaveLink}"/>
-                <br />
-                <br />
-                <h:link outcome="View" value="#{bundle.EditRestauranteViewLink}"/>
-                <br />
-                <h:commandLink action="#{restauranteController.prepareList}" value="#{bundle.EditRestauranteShowAllLink}" immediate="true"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.EditRestauranteIndexLink}" />
+                <h:commandButton class="btn btn-primary" action="#{restauranteController.update}" value="#{bundle.EditRestauranteSaveLink}"/>
+                
             </h:form>
         </ui:define>
     </ui:composition>
