implementacion edicion en la parte de dueño de restaurante logeado esta incompleta

--- a/web/usuario/paginaUsuario.xhtml
+++ b/web/usuario/paginaUsuario.xhtml
@@ -17,11 +17,12 @@
                 GLOTON GESTION PLATOS Y PROMOCIONES
                 <br/>
                 <br />
+                <h:form> 
                 <h:button outcome="calificacion/List" value="Lista de Calificaciones" class="btn btn-primary"/>
                 <h:button outcome="platoRestaurante/GestionPlatoRestaurante" value="Gestion de Plato Restaurante" class="btn btn-primary"/>
-                <h:button outcome="restaurante/Edit" value="Editar Restaurante" class="btn btn-primary"/>
+                <p:commandButton  value="Editar Restaurante" action="#{restauranteController.prepararEdicion}"/>        
                 <br />  
-                <h:form>            
+                           
                 <p:commandButton value="Logout" action="#{sessionController.logout()}" icon="ui-icon-person"/>           
                 </h:form>
 
