resuelta la edicion de restaurante de un usuario

--- a/web/usuario/paginaUsuario.xhtml
+++ b/web/usuario/paginaUsuario.xhtml
@@ -20,7 +20,7 @@
                 <h:form> 
                 <h:button outcome="calificacion/List" value="Lista de Calificaciones" class="btn btn-primary"/>
                 <h:button outcome="platoRestaurante/GestionPlatoRestaurante" value="Gestion de Plato Restaurante" class="btn btn-primary"/>
-                <p:commandButton  value="Editar Restaurante" action="#{restauranteController.prepararEdicion}"/>        
+                <p:commandButton  value="Editar Restaurante" action="#{duenoRestauranteController.prepararEdicion}"/>        
                 <br />  
                            
                 <p:commandButton value="Logout" action="#{sessionController.logout()}" icon="ui-icon-person"/>           
