--- a/web/admin/plato/Edit.xhtml
+++ b/web/admin/plato/Edit.xhtml
@@ -3,46 +3,77 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/plantillaMaestra.xhtml">
-          
-            <ui:define name="top">    
-                <ul class="nav nav-pills">
-                    <li><a href="#" class="btn btn-info btn-lg">Editar Plato</a></li>
-                    <li><a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a></li>
-                    <li><a href="List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a></li>
-                    <li><a href="../restaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de Restaurantes</a></li>
-                    <li><a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a></li>
-                </ul>
-            </ui:define>
-                
-            <ui:define name="content">
-                <br/><br/>
-                <h1 class="page-header">Platos</h1>
-                <br/><br/>
-                <h:panelGroup id="messagePanel" layout="block">
-                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-                </h:panelGroup>
-                <h:form>    
-                    <h:panelGrid columns="2">
-                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaNombre}" for="plaNombre" />
-                        <h:inputText id="plaNombre" value="#{platoController.selected.plaNombre}" title="#{bundle.EditPlatoTitle_plaNombre}" />
-                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaImagen}" for="plaImagen" />
-                        <h:inputText id="plaImagen" value="#{platoController.selected.plaImagen}" title="#{bundle.EditPlatoTitle_plaImagen}" />
-                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaEstado}" for="plaEstado" />
-                        <h:inputText id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.EditPlatoTitle_plaEstado}" />
-                        <h:outputLabel value="#{bundle.EditPlatoLabel_plaId}" for="plaId" />
-                        <h:inputText id="plaId" value="#{platoController.selected.plaId}" title="#{bundle.EditPlatoTitle_plaId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_plaId}"/>
-                        <h:outputLabel value="#{bundle.EditPlatoLabel_tblcategoriacatId}" for="tblcategoriacatId" />
-                        <h:selectOneMenu id="tblcategoriacatId" value="#{platoController.selected.tblcategoriacatId}" title="#{bundle.EditPlatoTitle_tblcategoriacatId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_tblcategoriacatId}">
-                            <f:selectItems value="#{categoriaController.itemsAvailableSelectOne}"/>
-                        </h:selectOneMenu>
-                    </h:panelGrid>
-                    <h:commandButton class="btn btn-primary" action="#{platoController.update}" value="#{bundle.EditPlatoSaveLink}"/>
 
-                </h:form>
-            </ui:define>
+        <ui:define name="top">    
+            <h:form>      
+                <p:panelGrid class="tblCentfull">
+                    <p:row>
+                        <p:column>
+                            <a href="#" class="btn btn-info btn-lg">Editar Plato</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a>
+                        </p:column>
+                        <p:column>
+                            <a href="List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../restaurante/List.xhtml" class="btn btn-default btn-lg">Gestion de Restaurantes</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a>
+                        </p:column>
+                        <p:column class="btn btn-success">
+                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
+
+            </h:form>
+        </ui:define>
+
+        <ui:define name="content">
+            <p:panelGrid class="tblCentfull">
+                <p:row>
+                    <p:column colspan="3">
+                        <h1 class="page-header alCen">Platos</h1>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column style="width: 500px">
+                    </p:column>
+                    <p:column>
+                        <h:panelGroup id="messagePanel" layout="block">
+                            <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+                        </h:panelGroup>
+                        <h:form>    
+                            <h:panelGrid columns="2">
+                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaNombre}" for="plaNombre" />
+                                <h:inputText  class="form-control" id="plaNombre" value="#{platoController.selected.plaNombre}" title="#{bundle.EditPlatoTitle_plaNombre}" />
+                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaImagen}" for="plaImagen" />
+                                <h:inputText  class="form-control" id="plaImagen" value="#{platoController.selected.plaImagen}" title="#{bundle.EditPlatoTitle_plaImagen}" />
+                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaEstado}" for="plaEstado" />
+                                <h:inputText  class="form-control" id="plaEstado" value="#{platoController.selected.plaEstado}" title="#{bundle.EditPlatoTitle_plaEstado}" />
+                                <h:outputLabel value="#{bundle.EditPlatoLabel_plaId}" for="plaId" />
+                                <h:inputText  class="form-control" id="plaId" value="#{platoController.selected.plaId}" title="#{bundle.EditPlatoTitle_plaId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_plaId}"/>
+                                <h:outputLabel value="#{bundle.EditPlatoLabel_tblcategoriacatId}" for="tblcategoriacatId" />
+                                <h:selectOneMenu  class="form-control" id="tblcategoriacatId" value="#{platoController.selected.tblcategoriacatId}" title="#{bundle.EditPlatoTitle_tblcategoriacatId}" required="true" requiredMessage="#{bundle.EditPlatoRequiredMessage_tblcategoriacatId}">
+                                    <f:selectItems value="#{categoriaController.itemsAvailableSelectOne}"/>
+                                </h:selectOneMenu>
+                            </h:panelGrid>
+                            <h:commandButton class="btn btn-primary" action="#{platoController.update}" value="#{bundle.EditPlatoSaveLink}"/>
+
+                        </h:form>
+                    </p:column>
+                    <p:column style="width: 500px">
+                    </p:column>
+                </p:row>
+            </p:panelGrid>
+        </ui:define>
     </ui:composition>
 
 </html>
