--- a/web/admin/restaurante/List.xhtml
+++ b/web/admin/restaurante/List.xhtml
@@ -3,101 +3,129 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/plantillaMaestra.xhtml">
-        
+
         <ui:define name="top">
-            <ul class="nav nav-pills">
-                <li><a href="Create.xhtml" class="btn btn-default btn-lg">Nuevo Restaurante</a></li>
-                <li><a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a></li>
-                <li><a href="../plato/List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a></li>
-                <li><a href="#" class="btn btn-info btn-lg">Gestion de Restaurantes</a></li>
-                <li><a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a></li>
-            </ul>
+            <h:form>      
+                <p:panelGrid class="tblCentfull">
+                    <p:row>
+                        <p:column>
+                            <a href="Create.xhtml" class="btn btn-default btn-lg">Nuevo Restaurante</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../categoria/List.xhtml" class="btn btn-default btn-lg">Gestion de Categorias</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../plato/List.xhtml" class="btn btn-default btn-lg">Gestion de Platos</a>
+                        </p:column>
+                        <p:column>
+                            <a href="#" class="btn btn-info btn-lg">Gestion de Restaurantes</a>
+                        </p:column>
+                        <p:column>
+                            <a href="../usuario/List.xhtml" class="btn btn-default btn-lg">Gestion de Usuarios</a>
+                        </p:column>
+                        <p:column class="btn btn-success">
+                            <h:commandButton class="btn btn-success btn-lg" value="Logout" action="#{sessionController.logout()}"/>
+                        </p:column>
+                    </p:row>
+                </p:panelGrid>
+
+            </h:form>
         </ui:define>
 
 
         <ui:define name="right">
         </ui:define>
         <ui:define name="content">
-            <br/><br/>       
-            <h1 class="page-header">Restaurante</h1>
-            <br/><br/> 
-            <h:form styleClass="jsfcrud_list_form">
-                <h:panelGroup id="messagePanel" layout="block">
-                    <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
-                </h:panelGroup>
-                <h:outputText escape="false" value="#{bundle.ListRestauranteEmpty}" rendered="#{restauranteController.items.rowCount == 0}"/>
-                <h:panelGroup rendered="#{restauranteController.items.rowCount > 0}">
-                    <h:outputText value="#{restauranteController.pagination.pageFirstItem + 1}..#{restauranteController.pagination.pageLastItem + 1}/#{restauranteController.pagination.itemsCount}"/>&nbsp;
-                    <h:commandLink action="#{restauranteController.previous}" value="#{bundle.Previous} #{restauranteController.pagination.pageSize}" rendered="#{restauranteController.pagination.hasPreviousPage}"/>&nbsp;
-                    <h:commandLink action="#{restauranteController.next}" value="#{bundle.Next} #{restauranteController.pagination.pageSize}" rendered="#{restauranteController.pagination.hasNextPage}"/>&nbsp;
-                    <h:dataTable value="#{restauranteController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Nit"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resNit}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Nombre"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resNombre}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Dirección"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resDireccion}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Teléfono"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resTelefono}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Logo"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resLogo}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Estado"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resEstado}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Posición"/>
-                            </f:facet>
-                            <h:outputText value="#{item.resLatitud},#{item.tesLongitud}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="Dueño"/>
-                            </f:facet>
-                            <h:outputText value="#{item.tblUsuarioDueId}"/>
-                        </h:column>
-                        <h:column>
-                            <f:facet name="header">
-                                <h:outputText value="&nbsp;"/>
-                            </f:facet>
-                            <h:commandButton class="btn btn-info" action="#{restauranteController.prepareEdit}" value="#{bundle.ListRestauranteEditLink}"/>
-                            <h:outputText value=" "/>
-                            <h:commandButton class="btn btn-danger" action="#{restauranteController.destroy}" value="#{bundle.ListRestauranteDestroyLink}"/>
-                        </h:column>
-                    </h:dataTable>
-                </h:panelGroup>
-                <br />
-                <h:commandLink action="#{restauranteController.prepareCreate}" value="#{bundle.ListRestauranteCreateLink}"/>
-                <br />
-                <br />
-                <h:link outcome="/index" value="#{bundle.ListRestauranteIndexLink}"/>
-            </h:form>
+            <p:panelGrid class="tblCentfull">
+                <p:row>
+                    <p:column colspan="3">
+                        <h1 class="page-header alCen">Restaurantes</h1>
+                    </p:column>
+                </p:row>
+                <p:row>
+                    <p:column style="width: 100px">
+                    </p:column>
+                    <p:column>
+                        <h:form styleClass="jsfcrud_list_form">
+                            <h:panelGroup id="messagePanel" layout="block">
+                                <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
+                            </h:panelGroup>
+                            <h:outputText escape="false" value="#{bundle.ListRestauranteEmpty}" rendered="#{restauranteController.items.rowCount == 0}"/>
+                            <h:panelGroup rendered="#{restauranteController.items.rowCount > 0}">
+                                <h:outputText value="#{restauranteController.pagination.pageFirstItem + 1}..#{restauranteController.pagination.pageLastItem + 1}/#{restauranteController.pagination.itemsCount}"/>&nbsp;
+                                <h:commandLink action="#{restauranteController.previous}" value="#{bundle.Previous} #{restauranteController.pagination.pageSize}" rendered="#{restauranteController.pagination.hasPreviousPage}"/>&nbsp;
+                                <h:commandLink action="#{restauranteController.next}" value="#{bundle.Next} #{restauranteController.pagination.pageSize}" rendered="#{restauranteController.pagination.hasNextPage}"/>&nbsp;
+                                <h:dataTable class="tblCentfull" value="#{restauranteController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Nit"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.resNit}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Nombre"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.resNombre}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Dirección"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.resDireccion}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Teléfono"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.resTelefono}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Logo"/>
+                                        </f:facet>
+                                        <h:outputText value="Imagen Registrada"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Estado"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.resEstado}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Posición"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.resLatitud},#{item.tesLongitud}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Dueño"/>
+                                        </f:facet>
+                                        <h:outputText value="#{item.tblUsuarioDueId}"/>
+                                    </h:column>
+                                    <h:column>
+                                        <f:facet name="header">
+                                            <h:outputText value="Opciones"/>
+                                        </f:facet>
+                                        <h:commandButton class="btn btn-info" action="#{restauranteController.prepareEdit}" value="#{bundle.ListRestauranteEditLink}"/>
+                                        <h:outputText value=" "/>
+                                        <h:commandButton class="btn btn-danger" action="#{restauranteController.destroy}" value="#{bundle.ListRestauranteDestroyLink}"/>
+                                    </h:column>
+                                </h:dataTable>
+                            </h:panelGroup>
+                        </h:form>
+
+                    </p:column>
+                    <p:column style="width: 100px">
+                    </p:column>
+                </p:row>
+            </p:panelGrid>
+
         </ui:define>
     </ui:composition>
 
